--- a/src/main/resources/templates/post/view.html
+++ b/src/main/resources/templates/post/view.html
@@ -62,6 +62,11 @@
                         </div>
                     </fieldset>
                 </div>
+
+                <!--/* 댓글 렌더링 영역  32걍 추가 부분*/-->
+                <div class="cm_list">
+                    <!--여기에 댓글이 ajax로 호출한 뒤 들어 올 내용입니다.-->
+                </div>
             </section>
         </div> <!--/* .content */-->
     </th:block>
@@ -69,6 +74,10 @@
     <th:block layout:fragment="script">
         <script th:inline="javascript">
         /*<![CDATA[*/
+
+             window.onload = () => {
+                findAllComment(); // 댓글 호출을 위한 Ajax 함수 호출 부분 32강 추가 부분
+             }
 
             // 게시글 삭제
             function deletePost() {
@@ -135,7 +144,7 @@
                 const params = {
                     postId : postId,
                     content : content.value,
-                    writer : '홍길동'
+                    writer : '퇴깽이'
                 }
 
                 $.ajax({
@@ -147,6 +156,12 @@
                     async : false,
                     success : function (response) {
                         console.log(response);
+                        // 32강에서의 추가 부분임 시작
+                        alert('저장되었습니다.');
+                        content.value = ''; // 댓글 저장후 내용 클리어
+                        document.getElementById('counter').innerText = '0/300자'; // 댓글 저장후 글자수 계산 클리어
+                        findAllComment();
+                        // 32강에서의 추가 부분임 종료
                     },
                     error : function (request, status, error) {
                         console.log(error)
@@ -154,6 +169,76 @@
                 })
             }
             // 30 강 댓글 작성과련 함수 끝 //
+
+            // 전체 댓글 조회 32강 추가부분임 View 페이지가 로딩될때 이 함수는 자동 호출되어지게 설계
+            // 아래부분은 기본적으로 호출되어 출력되는 것을 확인해보기 위한 코딩입니다
+            // 브라우저의 F12를 이용하여 확인해 보면 댓글을 확인해 볼수 있습니다
+            //<!--function findAllComment() {
+
+            //    const postId = [[ ${post.id} ]];
+
+            //    $.ajax({
+            //        url : `/posts/${postId}/comments`,
+            //        type : 'get',
+            //        dataType : 'json',
+            //        async : false,
+            //        success : function (response) {
+            //            console.log(response);
+            //        },
+            //        error : function (request, status, error) {
+            //            console.log(error)
+            //         }
+            //    })
+            // } -->
+
+            // 전체 댓글 조회 -32강 댓를 랜더링까지 적용한 부분
+            function findAllComment() {
+
+                const postId = [[ ${post.id} ]];
+
+                $.ajax({
+                    url : `/posts/${postId}/comments`,
+                    type : 'get',
+                    dataType : 'json',
+                    async : false,
+                    success : function (response) {
+
+                        // 1. 조회된 데이터가 없는 경우
+                        if ( !response.length ) {
+                            document.querySelector('.cm_list').innerHTML = '<div class="cm_none"><p>등록된 댓글이 없습니다.</p></div>';
+                            return false;
+                        }
+
+                        // 2. 렌더링 할 HTML을 저장할 변수
+                        let commentHtml = '';
+
+                        // 3. 댓글 HTML 추가
+                        response.forEach(row => {
+                            commentHtml += `
+                                <div>
+                                    <span class="writer_img"><img src="/images/default_profile.png" width="30" height="30" alt="기본 프로필 이미지"/></span>
+                                    <p class="writer">
+                                        <em>${row.writer}</em>
+                                        <span class="date">${dayjs(row.createdDate).format('YYYY-MM-DD HH:mm')}</span>
+                                    </p>
+                                    <div class="cont"><div class="txt_con">${row.content}</div></div>
+                                    <p class="func_btns">
+                                        <button type="button" class="btns"><span class="icons icon_modify">수정</span></button>
+                                        <button type="button" class="btns"><span class="icons icon_del">삭제</span></button>
+                                    </p>
+                                </div>
+                            `;
+                        })
+
+                        // 4. class가 "cm_list"인 요소를 찾아 HTML을 렌더링
+                        document.querySelector('.cm_list').innerHTML = commentHtml;
+                    },
+                    error : function (request, status, error) {
+                        console.log(error)
+                    }
+                })
+            }
+
         /*]]>*/
 
         </script>
