20230419-33강 댓글 수정 완료 commit

--- a/src/main/resources/templates/post/view.html
+++ b/src/main/resources/templates/post/view.html
@@ -69,6 +69,37 @@
                 </div>
             </section>
         </div> <!--/* .content */-->
+
+
+        <!--/* 댓글 수정 popup -- 33강에서 댓글 수정을 위한 Layer popup 생성을 위한 팝업추가 시작 */-->
+        <div id="commentUpdatePopup" class="popLayer">
+            <h3>댓글 수정</h3>
+            <div class="pop_container">
+                <table class="tb tb_row tl">
+                    <colgroup>
+                        <col style="width:30%;" /><col style="width:70%;" />
+                    </colgroup>
+                    <tbody>
+                        <tr>
+                            <th scope="row">작성자<span class="es">필수 입력</span></th>
+                            <td><input type="text" id="modalWriter" name="modalWriter" placeholder="작성자를 입력해 주세요." /></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">내용<span class="es">필수 입력</span></th>
+                            <td><textarea id="modalContent" name="modalContent" cols="90" rows="10" placeholder="수정할 내용을 입력해 주세요."></textarea></td>
+                        </tr>
+                    </tbody>
+                </table>
+                <p class="btn_set">
+                    <!--아래에 수정 버튼에 onClick 함수가 없는데도 동작하는 이유는 openCommentUpdatePopup() 함수에서 이미 만들어 주었음-->
+                    <button type="button" id="commentUpdateBtn" class="btns btn_st2">수정</button>
+                    <button type="button" class="btns btn_bdr2" onclick="closeCommentUpdatePopup();">취소</button>
+                </p>
+            </div>
+            <button type="button" class="btn_close" onclick="closeCommentUpdatePopup();"><span><i class="far fa-times-circle"></i></span></button>
+        </div>
+        <!--/* 댓글 수정 popup -- 33강에서 댓글 수정을 위한 Layer popup 생성을 위한 팝업추가 끝 */-->
+
     </th:block>
 
     <th:block layout:fragment="script">
@@ -223,7 +254,10 @@
                                     </p>
                                     <div class="cont"><div class="txt_con">${row.content}</div></div>
                                     <p class="func_btns">
-                                        <button type="button" class="btns"><span class="icons icon_modify">수정</span></button>
+                                        <!-- 33강전에 쓰던 버튼 - onclick 없음 <button type="button" class="btns"><span class="icons icon_modify">수정</span></button>-->
+                                        <!--33강에서 수정된 버튼 시작 &#45;&#45; Layer Popup실행을 위한 onclick 함수가 있음-->
+                                        <button type="button" onclick="openCommentUpdatePopup(${row.id});" class="btns"><span class="icons icon_modify">수정</span></button>
+                                        <!--33강에서 수정된 버튼 끝 -->
                                         <button type="button" class="btns"><span class="icons icon_del">삭제</span></button>
                                     </p>
                                 </div>
@@ -238,6 +272,75 @@
                     }
                 })
             }
+
+            // 33걍 댓글 수정부분을 위한 Layer popup 생성을 위한 코드 시작
+            // 댓글 수정 팝업 open
+            function openCommentUpdatePopup(id) {
+
+                const postId = [[ ${post.id} ]];
+
+                $.ajax({
+                    url : `/posts/${postId}/comments/${id}`,
+                    type : 'get',
+                    dataType : 'json',
+                    async : false,
+                    success : function (response) {
+                        document.getElementById('modalWriter').value = response.writer;
+                        document.getElementById('modalContent').value = response.content;
+                        <!--아래부분은 댓글 수정을 위해 Layer popup에 onclick 속성을 생성하기 위한 코드입니다-->
+                        document.getElementById('commentUpdateBtn').setAttribute('onclick', `updateComment(${id})`);
+                        layerPop('commentUpdatePopup');
+                    },
+                    error : function (request, status, error) {
+                        console.log(error)
+                    }
+                })
+            }
+
+
+            // 댓글 수정 팝업 close
+            function closeCommentUpdatePopup() {
+                document.querySelectorAll('#modalContent, #modalWriter').forEach(element => element.value = '');
+                document.getElementById('commentUpdateBtn').removeAttribute('onclick');
+                layerPopClose('commentUpdatePopup');
+            }
+            // 33걍 댓글 수정부분을 위한 Layer popup 생성을 위한 코드 끝
+
+            // 33강의 Layer 팝업의 댓글 수정 버튼의 동작을 위한 함수 시작
+            // 댓글 수정
+            function updateComment(id) {
+
+                const writer = document.getElementById('modalWriter');
+                const content = document.getElementById('modalContent');
+                isValid(writer, '작성자');
+                isValid(content, '수정할 내용');
+
+                const postId = [[ ${post.id} ]];
+                const params = {
+                    id : id,
+                    postId : postId,
+                    content : content.value,
+                    writer : writer.value
+                }
+
+                $.ajax({
+                    url : `/posts/${postId}/comments/${id}`,
+                    type : 'patch',
+                    contentType : 'application/json; charset=utf-8',
+                    dataType : 'json',
+                    data : JSON.stringify(params),
+                    async : false,
+                    success : function (response) {
+                        alert('수정되었습니다.');
+                        closeCommentUpdatePopup();
+                        findAllComment();
+                    },
+                    error : function (request, status, error) {
+                        console.log(error)
+                    }
+                })
+            }
+            // 33강의 Layer 팝업의 댓글 수정 버튼의 동작을 위한 함수 끝
 
         /*]]>*/
 
